Fix issue with flexbox on iOS
On iOS the live code examples hang over the right side of the page.
Using `flex: none` fixes it.

--- a/docs/index.css
+++ b/docs/index.css
@@ -59,6 +59,7 @@ bram-panel pre {
 
   .example-code {
     max-width: 100%;
+    flex: none;
   }
 
   .example-live {
